src/main/java/com/example/restaurant/errors/details/EntityNotFoundErrorDetails.java
package com.example.restaurant.errors.details;

import java.util.Map;

public record EntityNotFoundErrorDetails(
        String entityClass,
        Map<String, Object> parameters
) {
}
